wacom: add translation context for Wacom action type

https://bugzilla.gnome.org/show_bug.cgi?id=682876